--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@clerk/backend": "^1.33.1",
     "@clerk/nextjs": "^6.20.0",
-    "@flags-sdk/growthbook": "latest",
+    "@flags-sdk/growthbook": "^0.1.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "flags": "latest",
+    "flags": "^4.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.4.1",
     "react": "^19.0.0",
