feat: implement Clerk webhook handling and user synchronization with Supabase

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-hook-form": "^7.56.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.32"
+  "zod": "^3.25.32",
+  "svix": "^1.44.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
