feat: refactor service plugins to use FeatureManifest and improve navigation structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@familying/feature-registry": ["packages/feature-registry/src"],
+      "@familying/feature-registry/*": ["packages/feature-registry/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
