--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+  "lint": "next lint",
+  "db:migrate": "tsx scripts/migrate.ts"
   },
   "dependencies": {
     "@clerk/backend": "^1.34.0",
@@ -35,7 +36,8 @@
     "sonner": "^2.0.7",
     "svix": "^1.44.0",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.32"
+  "zod": "^3.25.32",
+  "pg": "^8.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -46,7 +48,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "eslint-plugin-react-hooks": "^5.2.0",
+  "eslint-plugin-react-hooks": "^5.2.0",
+  "eslint-plugin-import": "^2.29.1",
+  "tsx": "^4.19.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
