--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@familying/feature-registry": ["packages/feature-registry/src"],
-      "@familying/feature-registry/*": ["packages/feature-registry/src/*"]
+      "@familying/feature-registry": ["./packages/feature-registry/src"],
+      "@familying/feature-registry/*": ["./packages/feature-registry/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
