--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,13 @@
 			"command": "pnpm dev",
 			"isBackground": true,
 			"group": "build"
+		},
+		{
+			"label": "Dev: Next.js",
+			"type": "shell",
+			"command": "pnpm dev",
+			"isBackground": true,
+			"group": "build"
 		}
 	]
 }
