--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-  "lint": "next lint",
-  "db:migrate": "tsx scripts/migrate.ts"
+    "lint": "next lint",
+    "db:migrate": "tsx scripts/migrate.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
     "@clerk/backend": "^1.34.0",
@@ -30,28 +34,35 @@
     "flags": "^4.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.4.1",
+    "pg": "^8.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "sonner": "^2.0.7",
     "svix": "^1.44.0",
     "tailwind-merge": "^3.3.0",
-  "zod": "^3.25.32",
-  "pg": "^8.12.0"
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-  "eslint-plugin-react-hooks": "^5.2.0",
-  "eslint-plugin-import": "^2.29.1",
-  "tsx": "^4.19.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.1",
+    "tsx": "^4.19.1",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
